hessian sql dates (#2636)
git-svn-id: svn://svn.caucho.com/resin/trunk/modules/hessian@4354 9c94448d-38f1-0310-a231-d98308ff1ebf